--- a/src/html/layouts/footer.html
+++ b/src/html/layouts/footer.html
@@ -93,9 +93,9 @@
                         <p>Enter your email address to register to our newsletter subscription</p>
                         <form action="/" method="get">
                             <input type="email" name="email" class="form-control" placeholder="Enter email">
-                            <button type="button" class="button button-lg button-main">
+                            <button type="button" class="button button-main">
                                 <span>Subscribe Now</span>
-                                <i class='bx bx-right-arrow-alt ms-1'></i>
+                                <i class='bx bx-right-arrow-alt '></i>
                             </button>
                         </form>
                     </div>
