--- a/src/html/layouts/header.html
+++ b/src/html/layouts/header.html
@@ -110,7 +110,7 @@
                                 placeholder="Search your course">
                             <button type="button" class="button button-main">
                                 Search
-                                <i class="bx bx-search ms-1"></i>
+                                <i class="bx bx-search "></i>
                             </button>
                         </form>
                     </div>
@@ -155,12 +155,12 @@
 
                     <a href="html/register.html" class="button button-dark d-none d-lg-flex ms-auto me-2" role="button">
                         Register
-                        <i class="bx bx-user-plus ms-1"></i>
+                        <i class="bx bx-user-plus "></i>
                     </a>
 
                     <a href="html/login.html" class="button button-outline-dark d-none d-lg-flex" role="button">
                         Login
-                        <i class="bx bx-log-in ms-1"></i>
+                        <i class="bx bx-log-in "></i>
                     </a>
                 </div>
             </div>
