--- a/src/html/layouts/hero.html
+++ b/src/html/layouts/hero.html
@@ -9,15 +9,15 @@
                         <p>Upgrade your skills with top-quality online courses. Flexible learning designed for your
                             growth. Join thousands of learners worldwide!</p>
                         <div class="mt-3">
-                            <a href="html/course-1.html" class="button button-lg button-dark mb-1 mb-md-0">
+                            <a href="html/course-1.html" class="button button-dark mb-1 mb-md-0">
                                 Find Courses
-                                <span><i class='bx bx-right-arrow-alt ms-1'></i></span>
+                                <span><i class='bx bx-right-arrow-alt'></i></span>
                             </a>
-                            <button type="button" class="button button-lg button-outline-dark ms-lg-2"
+                            <button type="button" class="button  button-outline-dark ms-lg-2"
                                 data-bs-toggle="modal" data-bs-target="#videoModal">
                                 Watch Demo
                                 <span>
-                                    <i class="bx bx-play ms-1"></i>
+                                    <i class="bx bx-play "></i>
                                 </span>
                             </button>
                         </div>
