--- a/src/scss/sections/_get-started.scss
+++ b/src/scss/sections/_get-started.scss
@@ -1,6 +1,6 @@
 .section.get-started {
     .section-inner {
-        background: linear-gradient(20deg, #22c55e 50%, #1eab52 0%);
+        background: var(--main-color);
         border-radius: 24px;
         padding-top: 32px;
         color: white;
