--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -37,9 +37,10 @@ body {
     background-color: #fff;
 }
 
-a {
+a, .nav-link {
     color: inherit;
     text-decoration: none;
+    &:hover { color: var(--main-color) }
 }
 
 h1,
