--- a/src/scss/components/_totop.scss
+++ b/src/scss/components/_totop.scss
@@ -8,7 +8,7 @@
     width: 48px;
     height: 48px;
     line-height: 48px;
-    border-radius: 12px;
+    border-radius: 100px;
     text-align: center;
     font-size: 20px;
     display: none;
@@ -17,6 +17,7 @@
 }
 
 .back-to-top:hover {
+    color: white;
     background-color: var(--main-color);
     animation: bounce 0.5s ease;
     box-shadow: 0 0 24px rgba(var(--main-rgb-color), 50%);
