--- a/src/html/layouts/header.html
+++ b/src/html/layouts/header.html
@@ -110,14 +110,15 @@
                                 placeholder="Search your course">
                             <button type="button" class="button button-main">
                                 Search
-                                <i class="bx bx-search "></i>
+                                <i class="bx bx-search"></i>
                             </button>
                         </form>
                     </div>
                 </div>
 
                 <!-- Right -->
-                <div class="col col-md-3 col-lg-4 align-self-center justify-content-end justify-content-lg-start d-flex">
+                <div
+                    class="col col-md-3 col-lg-4 align-self-center justify-content-end justify-content-lg-start d-flex">
                     <div class="social-links">
                         @@include('html/components/socials.html')
                     </div>
