--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -14,13 +14,7 @@
     letter-spacing: 0.75px;
 
     i {
-        display: grid !important;
-        place-content: center;
-        --size: 32px;
-        width: var(--size);
-        height: var(--size);
-        border-radius: 100%;
-        margin-left: 12px;
+        margin-left: 6px;
     }
 }
 
@@ -33,35 +27,33 @@
     padding: 12px 24px;
 }
 
+.button-icon {
+    i {
+        display: grid !important;
+        place-content: center;
+        --size: 32px;
+        width: var(--size);
+        height: var(--size);
+        border-radius: 100%;
+        margin-left: 12px;
+    }
+
+}
+
 .button-main {
     color: white;
     background-color: var(--main-color);
     border: 1px solid var(--main-color);
 
-    i {
-        color: var(--main-color);
-        background-color: white;
-    }
-
     &:hover {
         background-color: transparent;
         color: var(--main-color);
-
-        i {
-            color: white;
-            background-color: var(--main-color);
-        }
     }
 }
 
 .button-outline-main {
     color: var(--main-color);
     border-color: var(--main-color);
-
-    i {
-        color: white;
-        background-color: var(--main-color);
-    }
 }
 
 @mixin button-solid-color($color) {
@@ -69,20 +61,10 @@
     background-color: $color;
     border: 1px solid $color;
 
-    i {
-        color: $color;
-        background-color: white;
-    }
-
     &:hover {
         background-color: transparent;
         color: $color;
         border: 1px solid $color;
-
-        i {
-            color: white;
-            background-color: $color;
-        }
     }
 }
 
@@ -90,19 +72,9 @@
     border: 1px solid $color;
     color: $color;
 
-    i {
-        color: white;
-        background-color: $color;
-    }
-
     &:hover {
         background-color: $color;
         color: white;
-
-        i {
-            color: $color;
-            background-color: white;
-        }
     }
 }
 
@@ -121,18 +93,8 @@
     background-color: white;
     border: 1px solid white;
 
-    i {
-        color: white;
-        background-color: var(--dark-color);
-    }
-
     &:hover {
         color: white;
         background-color: transparent;
-
-        i {
-            background-color: white;
-            color: var(--dark-color);
-        }
     }
 }
