--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -92,6 +92,11 @@
                 width: 200px;
             }
         }
+
+        form button {
+            width: 160px;
+            justify-content: center;
+        }
     }
 
     .social-links {
