--- a/src/html/layouts/footer.html
+++ b/src/html/layouts/footer.html
@@ -5,7 +5,8 @@
                 <div class="col-md-6 col-lg-3 footer-block">
                     @@include('html/components/logo.html')
 
-                    <p class="lh-lg">Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit.</p>
+                    <p class="lh-lg">Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt
+                        mollit.</p>
 
                     <div class="socials">
                         @@include('html/components/socials.html')
@@ -93,7 +94,7 @@
                         <p>Enter your email address to register to our newsletter subscription</p>
                         <form action="/" method="get">
                             <input type="email" name="email" class="form-control" placeholder="Enter email">
-                            <button type="button" class="button button-main">
+                            <button type="button" class="button button-icon button-main">
                                 <span>Subscribe Now</span>
                                 <i class='bx bx-right-arrow-alt '></i>
                             </button>
