--- a/src/html/components/offcanvas.html
+++ b/src/html/components/offcanvas.html
@@ -103,7 +103,7 @@
             <span>Total</span>
             <span class="total-price">$10.50</span>
         </p>
-        <button type="button" class="button button-main w-100 mt-3 justify-content-center">Checkout</button>
+        <button type="button" class="button button-icon button-main w-100 mt-3 justify-content-center">Checkout</button>
     </div>
 </div>
 
@@ -170,16 +170,11 @@
 
         <div class="subscribe">
             <h6>Subscribe Now</h6>
-            <form action="/" method="get" class="text-center">
+            <form action="/" method="get">
                 <input type="email" class="form-control" placeholder="Enter your email" required>
-                <button type="submit" class="button button-main w-100 justify-content-center">
+                <button type="submit" class="button button-icon button-main justify-content-center">
                     Subscribe
-                    <span>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                            <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                stroke-miterlimit="10" stroke-width="1" d="m14 16l4-4m0 0l-4-4m4 4H6" />
-                        </svg>
-                    </span>
+                    <i class="bx bx-right-arrow-alt"></i>
                 </button>
             </form>
         </div>
