--- a/src/scss/components/_offcanvas.scss
+++ b/src/scss/components/_offcanvas.scss
@@ -186,7 +186,7 @@
         margin-bottom: 16px;
     }
 
-    .offcanvas-body>div {
+    .offcanvas-body>div:not(:last-of-type) {
         margin-bottom: 24px;
         border-bottom: 1px dashed rgb(0 0 0 / 25%);
     }
