Chnage button hover effect

--- a/src/html/components/offcanvas.html
+++ b/src/html/components/offcanvas.html
@@ -103,7 +103,7 @@
             <span>Total</span>
             <span class="total-price">$10.50</span>
         </p>
-        <button type="button" class="button button-icon button-main w-100 mt-3 justify-content-center">Checkout</button>
+        <button type="button" class="button button-main w-100 mt-3 justify-content-center">Checkout</button>
     </div>
 </div>
 
@@ -173,7 +173,7 @@
             <form action="/" method="get">
                 <input type="email" class="form-control" placeholder="Enter your email" required>
                 <button type="submit" class="button button-icon button-main justify-content-center">
-                    Subscribe
+                    <span>Subscribe</span>
                     <i class="bx bx-right-arrow-alt"></i>
                 </button>
             </form>
