--- a/src/html/layouts/hero.html
+++ b/src/html/layouts/hero.html
@@ -10,12 +10,12 @@
                             growth. Join thousands of learners worldwide!</p>
                         <div class="mt-3">
                             <a href="html/course-1.html" class="button button-icon button-dark mb-1 mb-md-0">
-                                Find Courses
+                                <span>Find Courses</span>
                                 <i class='bx bx-right-arrow-alt'></i>
                             </a>
-                            <button type="button" class="button button-icon  button-outline-dark ms-lg-2"
+                            <button type="button" class="button button-icon button-outline-dark ms-lg-2"
                                 data-bs-toggle="modal" data-bs-target="#videoModal">
-                                Watch Demo
+                                <span>Watch Demo</span>
                                 <i class="bx bx-play"></i>
                             </button>
                         </div>
