--- a/src/html/layouts/navbar.html
+++ b/src/html/layouts/navbar.html
@@ -179,7 +179,7 @@
                         </a>
                     </li>
                     <li class="nav-item d-none d-lg-block">
-                        <button type="button" class="button shopping-cart position-relative" data-bs-toggle="offcanvas"
+                        <button type="button" class="button shopping-cart position-relative border-0" data-bs-toggle="offcanvas"
                             href="#addToCartCanvas">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                 <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
@@ -193,7 +193,7 @@
                         </button>
                     </li>
                     <li class="nav-item d-none d-lg-block">
-                        <button type="button" class="button sidebar-cyan-button" data-bs-toggle="offcanvas"
+                        <button type="button" class="button sidebar-cyan-button border-0" data-bs-toggle="offcanvas"
                             data-bs-target="#contactInfoCanvas">
                             <span class="visually-hidden">Contact info canvas toggler</span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
