--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 @use "../abstracts/variables" as *;
 
 .button {
@@ -26,6 +27,7 @@
             transition: all .3s ease;
             order: 1;
         }
+
         i {
             --size: 32px;
             width: var(--size);
@@ -40,9 +42,9 @@
     }
 
     &-icon:hover i {
-        transform: translateX(-325%);
+        transform: translateX(-345%);
     }
-    
+
     &-icon:hover span {
         transform: translateX(40px);
     }
@@ -57,16 +59,6 @@
             color: $value;
             background-color: white;
         }
-
-        // &:hover {
-        //     color: $value;
-        //     background-color: transparent;
-
-        //     &.button-icon i {
-        //         color: white;
-        //         background-color: $value;
-        //     }
-        // }
     }
 }
 
@@ -80,15 +72,9 @@
             background-color: $value;
         }
 
-        // &:hover {
-        //     color: white;
-        //     background-color: $value;
-
-        //     &.button-icon i {
-        //         color: $value;
-        //         background-color: white;
-        //     }
-        // }
+        &:hover {
+            background-color: color.adjust($value, $lightness: 75%)
+        }
     }
 }
 
