--- a/src/html/layouts/hero.html
+++ b/src/html/layouts/hero.html
@@ -9,7 +9,7 @@
                         <p>Upgrade your skills with top-quality online courses. Flexible learning designed for your
                             growth. Join thousands of learners worldwide!</p>
                         <div class="mt-3">
-                            <a href="html/course-1.html" class="button button-icon button-dark mb-1 mb-md-0">
+                            <a href="html/course-1.html" class="button button-icon button-main mb-1 mb-md-0">
                                 <span>Find Courses</span>
                                 <i class='bx bx-right-arrow-alt'></i>
                             </a>
