Improving code and complete index page

--- a/src/html/components/offcanvas.html
+++ b/src/html/components/offcanvas.html
@@ -28,7 +28,7 @@
                         <span class="price" data-price="10">$10.00</span>
                         <div class="quantity-input">
                             <button type="button" class="decrease">−</button>
-                            <input type="text" class="quantity-value" value="1" min="1" aria-label="quantity">
+                            <input type="text" class="quantity-value" value="1" aria-label="quantity">
                             <button type="button" class="increase">+</button>
                         </div>
                     </div>
@@ -51,7 +51,7 @@
                         <span class="price" data-price="45">$45.00</span>
                         <div class="quantity-input">
                             <button type="button" class="decrease">−</button>
-                            <input type="text" class="quantity-value" value="1" min="1" aria-label="quantity">
+                            <input type="text" class="quantity-value" value="1" aria-label="quantity">
                             <button type="button" class="increase">+</button>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                         <span class="price" data-price="75">$75.00</span>
                         <div class="quantity-input">
                             <button type="button" class="decrease">−</button>
-                            <input type="text" class="quantity-value" value="1" min="1" aria-label="quantity">
+                            <input type="text" class="quantity-value" value="1" aria-label="quantity">
                             <button type="button" class="increase">+</button>
                         </div>
                     </div>
@@ -111,9 +111,9 @@
 <div class="offcanvas contact-info-canvas offcanvas-end" tabindex="-1" id="contactInfoCanvas"
     aria-labelledby="contactInfoCanvasLabel">
     <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="contactInfoCanvasLabel">
+        <div class="offcanvas-title" id="contactInfoCanvasLabel">
             @@include('html/components/logo.html')
-        </h5>
+        </div>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
 
