--- a/src/html/layouts/header.html
+++ b/src/html/layouts/header.html
@@ -123,8 +123,8 @@
                         @@include('html/components/socials.html')
                     </div>
 
-                    <button type="button" class="button shopping-cart d-lg-none" data-bs-toggle="offcanvas"
-                        href="#addToCartCanvas">
+                    <button type="button" class="button shopping-cart d-lg-none border-0" data-bs-toggle="offcanvas"
+                        data-bs-target="#addToCartCanvas">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                                 stroke-width="1.5">
@@ -136,8 +136,8 @@
                         <span>3</span>
                     </button>
 
-                    <button type="button" class="button sidebar-cyan-button d-lg-none" data-bs-toggle="offcanvas"
-                        data-bs-target="#contactInfoCanvas">
+                    <button type="button" class="button sidebar-cyan-button d-lg-none border-0"
+                        data-bs-toggle="offcanvas" data-bs-target="#contactInfoCanvas">
                         <span class="visually-hidden">Contact Info Canvas Toggler</span>
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path fill="currentColor"
