--- a/src/html/components/modal.html
+++ b/src/html/components/modal.html
@@ -7,10 +7,7 @@
             </div>
             <div class="modal-body">
                 <div class="ratio ratio-16x9">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Tk3fL1iv3Kk?si=2vFjZFeayMyCzi7n"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <video src="/assets/images/videos/video-1.mp4" controls></video>
                 </div>
             </div>
         </div>
