--- a/src/scss/sections/_get-started.scss
+++ b/src/scss/sections/_get-started.scss
@@ -1,9 +1,11 @@
 .section.get-started {
     .section-inner {
-        background: var(--main-color);
+        background: var(--main-color) url("../images/home/get-started.jpg");
         border-radius: 24px;
-        padding-top: 32px;
         color: white;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
 
         @media (max-width: 992px) {
             padding: 32px;
@@ -12,6 +14,11 @@
             img {
                 display: none;
             }
+        }
+
+        .section-text {
+            text-align: center;
+            padding: 64px 0;
         }
     }
 }
