Set with 230px to menu

--- a/src/scss/layouts/_navbar.scss
+++ b/src/scss/layouts/_navbar.scss
@@ -83,6 +83,7 @@
                 opacity: 1;
                 visibility: visible;
                 transform: translateY(0);
+                width: 210px;
             }
         }
 
